@@ -1,5 +1,10 @@
 2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* libsteticui/PropertyTree.cs: Use a theme color for the property group
+	  headers. Fixes bug #356244.
+
+2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* libstetic/wrapper/Label.cs: Fix generation of MnemonicWidget property
 	  assignment.
 	* libstetic/wrapper/objects.xml: The default way of 
